--- a/Example/Podfile
+++ b/Example/Podfile
@@ -10,7 +10,7 @@ target 'PandoraBox_Example' do
 
     pod 'Specta'
     pod 'Expecta'
-    pod 'FBSnapshotTestCase'
+    # pod 'FBSnapshotTestCase'
     pod 'Expecta+Snapshots'
   end
 end
