添加 NSDateFormatter Category

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -8,9 +8,9 @@ target 'PandoraBox_Example' do
   target 'PandoraBox_Tests' do
     inherit! :search_paths
 
-    pod 'Specta'
-    pod 'Expecta'
+    # pod 'Specta'
+    # pod 'Expecta'
     # pod 'FBSnapshotTestCase'
-    pod 'Expecta+Snapshots'
+    # pod 'Expecta+Snapshots'
   end
 end
