--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,13 +4,13 @@ platform :ios, '8.0'
 
 target 'PandoraBox_Example' do
   pod 'PandoraBox', :path => '../'
-
+  
   target 'PandoraBox_Tests' do
     inherit! :search_paths
-
-    pod 'Specta'
-    pod 'Expecta'
-    # pod 'FBSnapshotTestCase'
-    pod 'Expecta+Snapshots'
+    
+    #    pod 'Specta'
+    #    pod 'Expecta'
+    #    pod 'FBSnapshotTestCase'
+    #    pod 'Expecta+Snapshots'
   end
 end
